header height on mobile fix and font sizes smaller

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://alekscreative.com/
 Author: AleksCreative
 Author URI: http://alekscreative.com
 Description: Theme for SCA
-Version: 1.0.11
+Version: 1.0.12
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: sca-website
@@ -268,8 +268,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
             textarea {
                 color: rgb(26, 26, 26);
                 font-family: 'Fira Sans', sans-serif;
-                font-size: 16px;
-                font-size: 1rem;
+                font-size: 15px;
+                font-size: .9rem;
                 line-height: 1.6;
             }
             
@@ -288,14 +288,14 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
             }
             
             h1 {
-                font-size: 2.6em;
+                font-size: 2.4em;
                 color: #5980a5;
                 margin-top: 4rem;
                 line-height: 1.2em;
             }
             
             h2 {
-                font-size: 2.2em;
+                font-size: 2em;
                 color: #486785;
                 line-height: 1.4em;
             }
@@ -1174,12 +1174,27 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
                 margin-top: -10px;
                 padding: 0 30px;
             }
+
+
             
             .header-wrap h1 {
                 color: #fff;
                 display: inline-block;
                 padding: 25px;
                 background-color: rgba(0, 0, 0, 0.6);
+            }
+
+            @media screen and (max-width:800px) {
+                .header-wrap {
+                    height: 300px;
+                    padding: 15px;
+                }
+                .header-wrap h1 {
+                    display: block;
+                    text-align: center;
+                    font-size: 2.2em;
+                }
+                
             }
 
 
